These are the fresh configs

--- a/DiffChecker/qtcreator/qbs/1.17.0/qbs.conf
+++ b/DiffChecker/qtcreator/qbs/1.17.0/qbs.conf
@@ -1,13 +1,13 @@
 [org]
-qt-project\qbs\preferences\qtcreator\kit\%7Ba0310559-35d7-4435-9401-f6410d9e0a9c%7D=qtc_Desktop_a09e10cb
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\cCompilerName=gcc
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\compilerName=clang++
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\cxxCompilerName=clang++
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\platformCommonCompilerFlags=@Invalid()
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\platformLinkerFlags=@Invalid()
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\cpp\toolchainInstallPath=/usr/bin
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\moduleProviders\Qt\qmakeFilePaths=/usr/bin/qmake
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\qbs\architecture=x86_64
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\qbs\architectures=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\f\0x\0\x38\0\x36\0_\0\x36\0\x34)
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\qbs\targetPlatform=linux
-qt-project\qbs\profiles\qtc_Desktop_a09e10cb\qbs\toolchain=clang, llvm, gcc
+qt-project\qbs\preferences\qtcreator\kit\%7Bab08d15b-27eb-48b7-beb0-e9aae0a08bc9%7D=qtc_Desktop_56e1016a
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\cCompilerName=gcc
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\compilerName=clang++
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\cxxCompilerName=clang++
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\platformCommonCompilerFlags=@Invalid()
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\platformLinkerFlags=@Invalid()
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\cpp\toolchainInstallPath=/usr/bin
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\moduleProviders\Qt\qmakeFilePaths=/usr/bin/qmake
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\qbs\architecture=x86_64
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\qbs\architectures=@Variant(\0\0\0\t\0\0\0\x1\0\0\0\n\0\0\0\f\0x\0\x38\0\x36\0_\0\x36\0\x34)
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\qbs\targetPlatform=linux
+qt-project\qbs\profiles\qtc_Desktop_56e1016a\qbs\toolchain=clang, llvm, gcc
